# Dynamical-Cryptography

./: README.md  pyproject.toml
examples/: 01_lwe_noise_is_hardness.py  02_lattice_reduction_attack.py  03_character_sums_pseudorandom.py  04_extractors_and_expanders.py
src/cryptosynth/: __init__.py  characters.py  expander.py  extractors.py  lattice.py  lwe.py
tests/: test_cryptosynth.py
